--- a/front-auth/src/app/dashboard/pages/home/home.component.html
+++ b/front-auth/src/app/dashboard/pages/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>,
+
+<div class="bg-slate-100 overflow-y-scroll w-screen h-screen antialiased text-slate-300 selection:bg-blue-600 selection:text-white">
+    <div class="flex flex-col relative w-screen">
+        <app-sidemenu/>
+        <router-outlet/>
+    </div>
+</div>
