Se deja flujos de audir y users listo

--- a/front-auth/src/app/dashboard/pages/auth/auth.component.html
+++ b/front-auth/src/app/dashboard/pages/auth/auth.component.html
@@ -1,7 +1,7 @@
 <div class="bg-gray-100 flex justify-center items-center h-screen">
     <!-- Left: Image -->
 <div class="w-1/2 h-screen hidden lg:block">
-  <img src="https://cdn.dribbble.com/users/1889528/screenshots/7239609/media/9618c7e174ae3ddf8aed3322cb86008e.jpg" alt="Placeholder Image" class="object-cover w-full h-full">
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSvumI_LzZuqktB_OQfYowHsu88QmULkrx_mw&s" alt="Placeholder Image" class="object-cover w-full h-full">
 </div>
 <!-- Right: Login Form -->
 <div class="lg:p-36 md:p-52 sm:20 p-8 w-full lg:w-1/2">
