--- a/front-auth/src/app/dashboard/components/card-item-audit/card-item-audit.component.html
+++ b/front-auth/src/app/dashboard/components/card-item-audit/card-item-audit.component.html
@@ -1,7 +1,7 @@
 <div class="max-w-2xl mx-auto">
     <div class="p-4 bg-white rounded-lg border shadow-md sm:p-8 dark:bg-gray-800 dark:border-gray-700">
         <div class="flex justify-between items-center mb-4">
-            <h3 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Latest Users</h3>
+            <h3 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Latest Audit</h3>
             <a href="#" class="text-sm font-medium text-blue-600 hover:underline dark:text-blue-500">
                 View all
             </a>
